--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <exec_depend>my_robot_description</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+<!--  <exec_depend>joint_state_publisher_gui</exec_depend>-->
   <exec_depend>gazebo_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
